# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//fusl/fusl.gni")

fusl_source_set("env") {
  sources = [
    "__environ.c",
    "__reset_tls.c",
    "clearenv.c",
    "getenv.c",
    "putenv.c",
    "setenv.c",
    "unsetenv.c",
  ]
}
