# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//fusl/fusl.gni")

fusl_source_set("ldso") {
  sources = [
    "dl_iterate_phdr.c",
    "dladdr.c",
    "dlinfo.c",
  ]

  if (current_cpu == "x64") {
    sources += [
      "x86_64/dlsym.s",
      "x86_64/tlsdesc.s",
    ]
  } else {
    sources += [
      "dlsym.c",
      "tlsdesc.c",
    ]
  }

  deps = [
    ":no_stack_protector",
  ]
}

fusl_source_set("no_stack_protector") {
  configs = [ "//fusl:fusl_no_stack_protector_config" ]

  sources = [
    "dlstart.c",
    "dynlink.c",
  ]
}
