# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//fusl/fusl.gni")

fusl_source_set("math") {
  sources = [
    "__cos.c",
    "__cosdf.c",
    "__cosl.c",
    "__expo2.c",
    "__expo2f.c",
    "__fpclassify.c",
    "__fpclassifyf.c",
    "__fpclassifyl.c",
    "__polevll.c",
    "__rem_pio2.c",
    "__rem_pio2_large.c",
    "__rem_pio2f.c",
    "__rem_pio2l.c",
    "__signbit.c",
    "__signbitf.c",
    "__signbitl.c",
    "__sin.c",
    "__sindf.c",
    "__sinl.c",
    "__tan.c",
    "__tandf.c",
    "__tanl.c",
    "acos.c",
    "acosf.c",
    "acosh.c",
    "acoshf.c",
    "acoshl.c",
    "asin.c",
    "asinf.c",
    "asinh.c",
    "asinhf.c",
    "asinhl.c",
    "atan.c",
    "atan2.c",
    "atan2f.c",
    "atanf.c",
    "atanh.c",
    "atanhf.c",
    "atanhl.c",
    "cbrt.c",
    "cbrtf.c",
    "cbrtl.c",
    "ceil.c",
    "ceilf.c",
    "copysign.c",
    "copysignf.c",
    "copysignl.c",
    "cos.c",
    "cosf.c",
    "cosh.c",
    "coshf.c",
    "coshl.c",
    "cosl.c",
    "erf.c",
    "erff.c",
    "erfl.c",
    "exp.c",
    "exp10.c",
    "exp10f.c",
    "exp10l.c",
    "exp2.c",
    "exp2f.c",
    "expf.c",
    "expm1.c",
    "expm1f.c",
    "fdim.c",
    "fdimf.c",
    "fdiml.c",
    "finite.c",
    "finitef.c",
    "floor.c",
    "floorf.c",
    "fma.c",
    "fmaf.c",
    "fmal.c",
    "fmax.c",
    "fmaxf.c",
    "fmaxl.c",
    "fmin.c",
    "fminf.c",
    "fminl.c",
    "fmod.c",
    "fmodf.c",
    "frexp.c",
    "frexpf.c",
    "frexpl.c",
    "hypot.c",
    "hypotf.c",
    "hypotl.c",
    "ilogb.c",
    "ilogbf.c",
    "ilogbl.c",
    "j0.c",
    "j0f.c",
    "j1.c",
    "j1f.c",
    "jn.c",
    "jnf.c",
    "ldexp.c",
    "ldexpf.c",
    "ldexpl.c",
    "lgamma.c",
    "lgamma_r.c",
    "lgammaf.c",
    "lgammaf_r.c",
    "lgammal.c",
    "llround.c",
    "llroundf.c",
    "llroundl.c",
    "log.c",
    "log10.c",
    "log10f.c",
    "log1p.c",
    "log1pf.c",
    "log2.c",
    "log2f.c",
    "logb.c",
    "logbf.c",
    "logbl.c",
    "logf.c",
    "lround.c",
    "lroundf.c",
    "lroundl.c",
    "modf.c",
    "modff.c",
    "modfl.c",
    "nan.c",
    "nanf.c",
    "nanl.c",
    "nearbyint.c",
    "nearbyintf.c",
    "nearbyintl.c",
    "nextafter.c",
    "nextafterf.c",
    "nextafterl.c",
    "nexttoward.c",
    "nexttowardf.c",
    "nexttowardl.c",
    "pow.c",
    "powf.c",
    "powl.c",
    "remainder.c",
    "remainderf.c",
    "remquo.c",
    "remquof.c",
    "remquol.c",
    "rint.c",
    "rintf.c",
    "round.c",
    "roundf.c",
    "roundl.c",
    "scalb.c",
    "scalbf.c",
    "scalbln.c",
    "scalblnf.c",
    "scalblnl.c",
    "scalbn.c",
    "scalbnf.c",
    "scalbnl.c",
    "signgam.c",
    "significand.c",
    "significandf.c",
    "sin.c",
    "sincos.c",
    "sincosf.c",
    "sincosl.c",
    "sinf.c",
    "sinh.c",
    "sinhf.c",
    "sinhl.c",
    "sinl.c",
    "tan.c",
    "tanf.c",
    "tanh.c",
    "tanhf.c",
    "tanhl.c",
    "tanl.c",
    "tgamma.c",
    "tgammaf.c",
    "tgammal.c",
    "trunc.c",
    "truncf.c",
  ]
}
