# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/module_args/mojo.gni")
import("//mojo/public/mojo_application.gni")
import("$mojo_sdk_root/mojo/public/mojo_sdk.gni")

source_set("framework") {
  sources = [
    "conversion_pipeline_builder.cc",
    "conversion_pipeline_builder.h",
    "engine.cc",
    "engine.h",
    "formatting.cc",
    "formatting.h",
    "graph.cc",
    "graph.h",
    "incident.cc",
    "incident.h",
    "lpcm_util.cc",
    "lpcm_util.h",
    "metadata.cc",
    "metadata.h",
    "models/active_multistream_sink.h",
    "models/active_multistream_source.h",
    "models/active_sink.h",
    "models/active_source.h",
    "models/demand.h",
    "models/multistream_source.h",
    "models/part.h",
    "models/transform.h",
    "packet.cc",
    "packet.h",
    "parts/decoder.h",
    "parts/demux.h",
    "parts/file_reader.cc",
    "parts/file_reader.h",
    "parts/lpcm_reformatter.cc",
    "parts/lpcm_reformatter.h",
    "parts/null_sink.cc",
    "parts/null_sink.h",
    "parts/reader.cc",
    "parts/reader.h",
    "payload_allocator.cc",
    "payload_allocator.h",
    "refs.cc",
    "refs.h",
    "result.h",
    "safe_clone.h",
    "stages/active_multistream_sink_stage.cc",
    "stages/active_multistream_sink_stage.h",
    "stages/active_multistream_source_stage.cc",
    "stages/active_multistream_source_stage.h",
    "stages/active_sink_stage.cc",
    "stages/active_sink_stage.h",
    "stages/active_source_stage.cc",
    "stages/active_source_stage.h",
    "stages/input.cc",
    "stages/input.h",
    "stages/multistream_source_stage.cc",
    "stages/multistream_source_stage.h",
    "stages/output.cc",
    "stages/output.h",
    "stages/stage.cc",
    "stages/stage.h",
    "stages/transform_stage.cc",
    "stages/transform_stage.h",
    "stages/util.cc",
    "stages/util.h",
    "stream_type.cc",
    "stream_type.h",
  ]

  deps = [
    "//base",
    "//url",
  ]
}

mojo_native_application("apptests") {
  output_name = "media_framework_apptests"

  testonly = true

  sources = [
    "test/incident_test.cc",
    "test/test_base.h",
  ]

  deps = [
    ":framework",
    "//base",
    "//mojo/application",
    "//mojo/application:test_support",
    "//services/media/framework_create",
  ]
}
